would generate a warning message
* Fixed a bug where all users can't get to user preferences
* Fixed a bug where css assocations did not get deleted when a
template does
* Fixed a few bugs with the css assocation page
* Fixed a few bugs with the News module
* Fixed bug with phplayers not displaying correctly if the body tag
of the template had any attributes

Version 0.10 "Antigua" -- Tue Jul 05 2005
-----------------

* Added dropdown of encodings to add/edit template pages
* Added multiple content blocks
* Added recursive html blobs
* Added ability for modules to use templates, either file based
or db based through a few API calls
* Added support for module translations
* Added indexes to increase performance
* Added bookmarks and recent pages to the admin
* Added javascript tabs to content editing
* Added global locale option to config.php
* Added parameter to CreateLink to allow modules to force contents
to {content} tag, while still displaying the same content in their
{cms_module}.
* Changed admin interface and themes
* Changed installer to use regular Submit buttons...  now works in
Konqueror
* Fixed bug with image path generation in TinyMCE
* Fixed bug with text parameter in print plugin
* Fixed bug with inactive pages still being accessible by page id
* Fixed encoding problems with editing title and menu text in content
* Removed the redirect pages while logging in or out
* Updated ADODB to 4.61
* Updated Smarty to 2.6.9 (Jope)
* Updated TinyMCE to 1.4.4
* Updated News module to 2.0 (complete rewrite, but upgradable)
* Much Much More...

Version 0.9.2 "Hatutu" -- Fri Feb 25 2005
-----------------

* Fixed bug in site preference loading

Version 0.9.1 "Mohotani" -- Fri Feb 25 2005
-----------------

* Added collapse option to bulletmenu, for cases where section header
is used as parents for other content
* Added apply button to edit css
* Added LoadUsersByGroup() function (sjg)
* Added user and group classes to be loaded by default in include.php