@@ -14,6 +14,7 @@ template does
 * Fixed a few bugs with the News module
 * Fixed bug with phplayers not displaying correctly if the body tag
 of the template had any attributes
+* Fixed bug where custom 404 message didn't show existing value
 
 Version 0.10 "Antigua" -- Tue Jul 05 2005
 -----------------
